--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@
   --body-font: "Open Sans", sans-serif;
 }
 
+.collaboration-text {
+    margin: 0 0 1em 0;   /* 保持和其他 p 一样的上下间距 */
+    line-height: 1.6;    /* 行距统一 */
+    font-size: 16px;     /* 和其他段落文字大小一致 */
+    color:red
+}
+
 .scaled-image {
   width: 203px;
   height: 124px;
